Add a gtk3 port of peerconnection_client on Linux

BUG=668446

Review-Url: https://codereview.webrtc.org/2563203002
Cr-Commit-Position: refs/heads/master@{#15569}